updated spacing margin issue in card

--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,23 @@
 body {
   background-color: #242c38;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+html:focus-within {
+  scroll-behavior: smooth;
+}
